@@ -2,7 +2,7 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 1.5.4
-Date: 2021-07-21
+Date: 2021-08-24
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
